@@ -1,3 +1,8 @@
+2004-10-23  Adam Schreiber <sadam@clemson.edu>
+
+	* src/seahorse-generate-druid.c: Key generation assistant stops with 
+    name < 5 chars (bug# 154602)
+	
 2004-10-23  Nate Nielsen <nielsen@memberwebs.com>
 
 	* seahorse-key-manager-store.c: Fix problems with showing wrong 
